force-app/main/default/objects/APXT_CongaSign__Transaction__c/APXT_CongaSign__Transaction__c.object-meta.xml
<CustomObject>
    <description>Replication of Conga Sign Transaction.</description>
    <label>Conga Sign Transaction</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Sign Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>