force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/APXT_CongaSign__ExternalObjectId__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__ExternalObjectId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>