force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/APXT_CongaSign__OriginalDocumentId__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__OriginalDocumentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>