force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/APXT_CongaSign__RequestedOn__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__RequestedOn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>