force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/APXT_CongaSign__SendOnBehalfOfEmail__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__SendOnBehalfOfEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send On Behalf Of Email</label>
    <type>Email</type>
</CustomField>