force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/APXT_CongaSign__SendOnBehalfOfName__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__SendOnBehalfOfName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send On Behalf Of Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>