force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/APXT_CongaSign__UUID__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>