force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_a7Q__c.field-meta.xml
<CustomField>
    <fullName>Parent_a7Q__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>