force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_a7R__c.field-meta.xml
<CustomField>
    <fullName>Parent_a7R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual_Application_Shadow</label>
    <referenceTo>Individual_Application_Shadow__c</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>