force-app/main/default/objects/APXT_CongaSign__Transaction__c/listViews/All_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Transactions</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Transactions</label>
</ListView>